--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<link rel="stylesheet" media="all and (orientation:portrait)" href="css/portrait.css">
 		<link rel="stylesheet" media="all and (orientation:landscape)" href="css/landscape.css">
 		<script>
-			/*var game = new DNB();
+			var game = new DNB();
 			$(document).ready(function() {
 				game.init();
-			});*/
+			});
 		</script>
 	</head>
-	<body>DEBUGGING BE PATIENT :)</body>
+	<body></body>
 </html>
