--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<link rel="stylesheet" media="all and (orientation:landscape)" href="css/landscape.css">
 		<script>
 			$(document).ready(function() {
-				savedataInitializer();
-				markupInitializer();
-				eventsInitializer();
+				ENGINE.savedataInitializer();
+				ENGINE.markupInitializer();
+				ENGINE.eventsInitializer();
 			});
 		</script>
 	</head>
