--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		<link rel="stylesheet" media="all and (orientation:portrait)" href="css/portrait.css">
 		<link rel="stylesheet" media="all and (orientation:landscape)" href="css/landscape.css">
 		<script>
-			$(document).ready(function() {
-				savedataInitializer();
-				markupInitializer();
-				eventsInitializer();
-			});
+			/*$(document).ready(function() {
+				var GAME = new Engine();
+				GAME.savedataInitializer();
+				GAME.markupInitializer();
+				GAME.eventsInitializer();
+			});*/
 		</script>
 	</head>
-	<body></body>
+	<body>UPDATING THE APPLICATION</body>
 </html>
