--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
 			});*/
 		</script>
 	</head>
-	<body>UPDATING THE APPLICATION</body>
+	<body><span style="color:white">UPDATING THE APPLICATION</span></body>
 </html>
