--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 		<link rel="stylesheet" media="all and (orientation:portrait)" href="css/portrait.css">
 		<link rel="stylesheet" media="all and (orientation:landscape)" href="css/landscape.css">
 		<script>
-			/*$(document).ready(function() {
-				var GAME = new Engine();
+			var GAME = new Engine("GAME");
+			
+			$(document).ready(function() {
 				GAME.savedataInitializer();
 				GAME.markupInitializer();
 				GAME.eventsInitializer();
-			});*/
+			});
 		</script>
 	</head>
-	<body><span style="color:white">UPDATING THE APPLICATION</span></body>
+	<body></body>
 </html>
