--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			var GAME = new Engine("GAME");
 			
 			$(document).ready(function() {
-				GAME.savedataInitializer();
-				GAME.markupInitializer();
-				GAME.eventsInitializer();
+				GAME.savedataInit();
+				GAME.markupInit();
+				GAME.eventsInit();
 			});
 		</script>
 	</head>
