--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Lite Dual N-back</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<link rel="icon" type="image/png" href="favicon.png">
 		<script src="js/jquery.min.js"></script>
 		<script src="js/howler.js"></script>
 		<script src="js/chartist.min.js"></script>
