--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </li>
       <li class="nav-item">
         <!-- do you want feedback? -->
-        <span class="range-label">Response feedback? </span>
+        <span class="range-label">Clue feedback? </span>
         <span id="feedback-span" class="range-label">on</span>
         <input type="range" class="slider" id="feedback" min="0" max="1" step="1" value="1">
       </li>
