--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <body>
 
-    <!-- slidemenu start -->
+    <!-- slide-menu start -->
     <ul id="navigation">
 
       <!-- an indicator of the level in which you play -->
@@ -78,9 +78,9 @@
         </p>
       </li>
     </ul>
-    <!-- slidemenu end -->
+    <!-- slide-menu end -->
 
-    <!-- hamburgher menu invocation button -->
+    <!-- slide-menu invocation button -->
     <input type="checkbox" id="nav-trigger"><label for="nav-trigger"></label>
 
     <!-- training-field start -->
