--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
     <!-- slide-menu start -->
     <ul id="navigation">
 
-      <!-- an indicator of the level in which you play -->
-      <li class="nav-item">
-        <p id="N-level">N = 2</p>
-      </li>
-
       <!-- settings start -->
       <li class="nav-item">
         <!-- sets the duration of clues -->
@@ -99,7 +94,11 @@
       <table id="grid">
         <tbody>
           <tr><td><div class="tile"></div></td><td><div class="tile"></div></td><td><div class="tile"></div></td></tr>
-          <tr><td><div class="tile"></div></td><td><div class="tile"></div></td><td><div class="tile"></div></td></tr>
+          <tr><td><div class="tile"></div>
+          </td><td><div class="tile center-tile">
+              <p id="N-level">N = 2</p>
+            </div>
+          </td><td><div class="tile"></div></td></tr>
           <tr><td><div class="tile"></div></td><td><div class="tile"></div></td><td><div class="tile"></div></td></tr>
         </tbody>
       </table>
