Switch nav-trigger to previous style

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- slide-menu end -->
 
     <!-- slide-menu invocation button -->
-    <input type="checkbox" id="nav-trigger"><label for="nav-trigger">&#9776;</label>
+    <input type="checkbox" id="nav-trigger"><label for="nav-trigger"></label>
 
     <!-- training-field start -->
     <div id="site-wrap">
