--- a/index.html
+++ b/index.html
@@ -93,13 +93,9 @@
       <!-- the N-back grid -->
       <table id="grid">
         <tbody>
+          <tr><td><div class="tile hidden"></div></td><td><div class="tile center-tile"><p id="N-level">N = 2</p></div></td><td><div class="tile hidden"></div></td></tr>
           <tr><td><div class="tile"></div></td><td><div class="tile"></div></td><td><div class="tile"></div></td></tr>
-          <tr><td><div class="tile"></div>
-          </td><td><div class="tile center-tile">
-              <p id="N-level">N = 2</p>
-            </div>
-          </td><td><div class="tile"></div></td></tr>
-          <tr><td><div class="tile"></div></td><td><div class="tile"></div></td><td><div class="tile"></div></td></tr>
+          <tr><td><div class="tile hidden"></div></td><td><div class="tile hidden"></div></td><td><div class="tile hidden"></div></td></tr>
         </tbody>
       </table>
 
