Changes for Thomas

--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
       <li class="nav-item">
         <!-- sets the duration of clues -->
         <span class="range-label">Stimulus time </span>
-        <span id="set-time-span" class="range-label">2500ms</span>
-        <input type="range" class="slider" id="set-time" min="1000" max="5000" step="250" value="2500">
+        <span id="set-time-span" class="range-label">2000ms</span>
+        <input type="range" class="slider" id="set-time" min="800" max="15000" step="100" value="2000">
+      </li>
+      <li class="nav-item">
+        <!-- do you want dynamic delay? -->
+        <span class="range-label">Dynamic delay? </span>
+        <span id="dynamic-delay-span" class="range-label">on</span>
+        <input type="range" class="slider" id="dynamic-delay" min="0" max="1" step="1" value="1">
       </li>
       <li class="nav-item">
         <!-- sets the quantity of clues -->
