--- a/v2/index.html
+++ b/v2/index.html
@@ -1,9 +1,9 @@
 <html>
 
   <head>
-    <title>Lite Dual N-back</title>
+    <title>Dichotic Dual N-back</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Open Source Lite Dual N-back">
+    <meta name="description" content="Open Source Dichotic Dual N-back">
     <meta name="keywords" content="DNB, N-back, WM">
     <meta name="author" content="4skinSkywalker">
     <meta name="viewport" content="width=device-width, user-scalable=no">
