Fix styles to improve gameplay

--- a/v2/index.html
+++ b/v2/index.html
@@ -113,31 +113,16 @@
       <table id="grid">
         <tbody>
           <tr>
-            <td>
+            <td class="heading-td">
               <div class="tile hidden"></div>
             </td>
-            <td>
+            <td class="heading-td">
               <div class="tile center-tile">
                 <p id="N-level">N = 2</p>
               </div>
             </td>
           </tr>
-          <tr>
-            <td>
-              <div class="tile tile-left"></div>
-            </td>
-            <td>
-              <div class="tile tile-right"></div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="tile hidden"></div>
-            </td>
-            <td>
-              <div class="tile hidden"></div>
-            </td>
-          </tr>
+          <tr><td class="visual-td"><div class="tile tile-left"></div></td><td class="visual-td"><div class="tile tile-right"></div></td></tr>
         </tbody>
       </table>
 
