--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -61,6 +61,12 @@
         <span id="feedback-span" class="range-label">on</span>
         <input type="range" class="slider" id="feedback" min="0" max="1" step="1" value="1">
       </li>
+      <li class="nav-item">
+        <!-- do you want auto level up? -->
+        <span class="range-label">Auto level up? </span>
+        <span id="level-up-span" class="range-label">on</span>
+        <input type="range" class="slider" id="level-up" min="0" max="1" step="1" value="1">
+      </li>
       <!-- settings end -->
 
       <!-- a brief description on how to play -->
