--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -70,7 +70,7 @@
       <li class="nav-item">
         <span class="range-label">Level up, &ge; </span>
         <span id="level-up-threshold-span" class="range-label">80%</span>
-        <input type="range" class="slider" id="level-up-threshold" min="40%" max="100%" step="5" value="80">
+        <input type="range" class="slider" id="level-up-threshold" min="40" max="100" step="5" value="80">
       </li>
       <li class="nav-item">
         <span class="range-label">Level down, &le; </span>
