Fix once again level up/down logic and put a better explanation

--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -68,14 +68,14 @@
         <input type="range" class="slider" id="level-up" min="0" max="1" step="1" value="1">
       </li>
       <li class="nav-item">
-        <span class="range-label">Level up, &ge; </span>
-        <span id="level-up-threshold-span" class="range-label">80%</span>
-        <input type="range" class="slider" id="level-up-threshold" min="40" max="100" step="5" value="80">
+        <span class="range-label">Level-- when </span>
+        <span id="level-down-threshold-span" class="range-label">60% error</span>
+        <input type="range" class="slider" id="level-down-threshold" min="0" max="100" step="5" value="40">
       </li>
       <li class="nav-item">
-        <span class="range-label">Level down, &le; </span>
-        <span id="level-down-threshold-span" class="range-label">40%</span>
-        <input type="range" class="slider" id="level-down-threshold" min="20" max="80" step="5" value="40">
+        <span class="range-label">Level++ when </span>
+        <span id="level-up-threshold-span" class="range-label">80% correct</span>
+        <input type="range" class="slider" id="level-up-threshold" min="0" max="100" step="5" value="80">
       </li>
       <!-- settings end -->
 
