Fix bug and labels

--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -62,18 +62,18 @@
         <input type="range" class="slider" id="feedback" min="0" max="1" step="1" value="1">
       </li>
       <li class="nav-item">
-        <!-- do you want auto level up? -->
-        <span class="range-label">Auto level up? </span>
+        <!-- do you want auto level? -->
+        <span class="range-label">Auto level? </span>
         <span id="level-up-span" class="range-label">on</span>
         <input type="range" class="slider" id="level-up" min="0" max="1" step="1" value="1">
       </li>
       <li class="nav-item">
-        <span class="range-label">Level-- when </span>
-        <span id="level-down-threshold-span" class="range-label">60% error</span>
-        <input type="range" class="slider" id="level-down-threshold" min="0" max="100" step="5" value="40">
+        <span class="range-label">Level- at </span>
+        <span id="level-down-threshold-span" class="range-label">65% error</span>
+        <input type="range" class="slider" id="level-down-threshold" min="0" max="100" step="5" value="65">
       </li>
       <li class="nav-item">
-        <span class="range-label">Level++ when </span>
+        <span class="range-label">Level+ at </span>
         <span id="level-up-threshold-span" class="range-label">80% correct</span>
         <input type="range" class="slider" id="level-up-threshold" min="0" max="100" step="5" value="80">
       </li>
