Change stimulus delay calculation

--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -35,9 +35,9 @@
       <!-- settings start -->
       <li class="nav-item">
         <!-- sets the duration of clues -->
-        <span class="range-label">Stimulus time </span>
-        <span id="set-time-span" class="range-label">2000ms</span>
-        <input type="range" class="slider" id="set-time" min="750" max="2500" step="125" value="2000">
+        <span class="range-label">Stimulus delay </span>
+        <span id="set-time-span" class="range-label">1s</span>
+        <input type="range" class="slider" id="set-time" min="200" max="1000" step="100" value="1000">
       </li>
       <li class="nav-item">
         <!-- sets the quantity of clues -->
