From "Stimulus delay" to "Reaction time"

--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -35,7 +35,7 @@
       <!-- settings start -->
       <li class="nav-item">
         <!-- sets the duration of clues -->
-        <span class="range-label">Stimulus delay </span>
+        <span class="range-label">Reaction time </span>
         <span id="set-time-span" class="range-label">1s</span>
         <input type="range" class="slider" id="set-time" min="200" max="1000" step="100" value="1000">
       </li>
