Add session time indicator

--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -34,6 +34,14 @@
 
       <!-- settings start -->
       <li class="nav-item">
+        <span
+          class="range-label"
+          style="display: inline-block; margin-bottom: 8px; color: #ffd700;"
+        >
+          Session time <span id="session-time-indicator">20m</span>
+        </span>
+      </li>
+      <li class="nav-item">
         <!-- sets the duration of clues -->
         <span class="range-label">Reaction time </span>
         <span id="set-time-span" class="range-label">1s</span>
