--- a/Audio_N-back/index.html
+++ b/Audio_N-back/index.html
@@ -45,19 +45,28 @@
         <!-- sets the duration of clues -->
         <span class="range-label">Reaction time: </span>
         <span id="set-time-span" class="range-label">1s</span>
-        <input type="range" class="slider" id="set-time" min="200" max="1000" step="100" value="1000">
+        <input
+          type="range" class="slider" id="set-time"
+          min="200" max="1000" step="100" value="1000"
+        >
       </li>
       <li class="nav-item">
         <!-- sets the quantity of clues -->
         <span class="range-label">Matching clues: </span>
         <span id="set-clues-span" class="range-label">10</span>
-        <input type="range" class="slider" id="set-clues" min="6" max="20" step="2" value="10">
+        <input
+          type="range" class="slider" id="set-clues"
+          min="6" max="20" step="2" value="10"
+        >
       </li>
       <li class="nav-item">
         <!-- sets a level of difficulty -->
         <span class="range-label">N-back level: </span>
         <span id="set-level-span" class="range-label">2</span>
-        <input type="range" class="slider" id="set-level" min="1" max="9" step="1" value="2">
+        <input
+          type="range" class="slider" id="set-level"
+          min="1" max="9" step="1" value="2"
+        >
       </li>
       <li class="nav-item">
         <!-- selects a sound for audio clues -->
@@ -70,33 +79,51 @@
         <!-- do you want feedback? -->
         <span class="range-label">Clue feedback? </span>
         <span id="feedback-span" class="range-label">on</span>
-        <input type="range" class="slider" id="feedback" min="0" max="1" step="1" value="1">
+        <input
+          type="range" class="slider" id="feedback"
+          min="0" max="1" step="1" value="1"
+        >
       </li>
       <li class="nav-item">
         <!-- do you want auto level? -->
         <span class="range-label">Auto level? </span>
         <span id="level-up-span" class="range-label">on</span>
-        <input type="range" class="slider" id="level-up" min="0" max="1" step="1" value="1">
+        <input
+          type="range" class="slider" id="level-up"
+          min="0" max="1" step="1" value="1"
+        >
       </li>
       <li class="nav-item">
         <div class="range-label">Correct level up:</div>
         <span id="level-up-threshold-span" class="range-label">80% correct</span>
-        <input type="range" class="slider" id="level-up-threshold" min="60" max="100" step="5" value="80">
+        <input
+          type="range" class="slider" id="level-up-threshold"
+          min="60" max="100" step="5" value="80"
+        >
       </li>
       <li class="nav-item">
         <div class="range-label">Error level down:</div>
         <span id="level-down-a-span" class="range-label">30% error</span>
-        <input type="range" class="slider" id="level-down-a" min="20" max="60" step="5" value="30">
+        <input
+          type="range" class="slider" id="level-down-a"
+          min="20" max="60" step="5" value="30"
+        >
       </li>
       <li class="nav-item">
         <div class="range-label">Missed level down:</div>
         <span id="level-down-b-span" class="range-label">50% error</span>
-        <input type="range" class="slider" id="level-down-b" min="20" max="60" step="5" value="50">
+        <input
+          type="range" class="slider" id="level-down-b"
+          min="20" max="60" step="5" value="50"
+        >
       </li>
       <li class="nav-item">
         <div class="range-label">Error + missed level down:</div>
         <span id="level-down-c-span" class="range-label">40% error</span>
-        <input type="range" class="slider" id="level-down-c" min="20" max="60" step="5" value="40">
+        <input
+          type="range" class="slider" id="level-down-c"
+          min="20" max="60" step="5" value="40"
+        >
       </li>
       <!-- settings end -->
 
